objects/Auto_Running_Numbers__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to store the latest running RP, CI and MDR number</description>
    <fields>
        <fullName>CI_Number__c</fullName>
        <description>Stores recent number that is to be assigned to CI Number</description>
        <inlineHelpText>Store recent number that is to be assigned to CI number</inlineHelpText>
        <label>CI Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDR_Number__c</fullName>
        <description>Stores recent number that is to be assigned to MDR number</description>
        <inlineHelpText>Store recent number that is to be assigned to RP number</inlineHelpText>
        <label>MDR Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RP_Number__c</fullName>
        <description>Stores recent number that is to be assigned to RP number</description>
        <inlineHelpText>Store recent number that is to be assigned to RP number</inlineHelpText>
        <label>RP Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Running_Number_Year__c</fullName>
        <description>Store the year to which the current running numbers in the custom settings belong</description>
        <inlineHelpText>Store the year to which the current running numbers in the custom settings belong</inlineHelpText>
        <label>Running Number Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Auto Running Numbers</label>
</CustomObject>